Use proper file inputs
Learned how to actually read files so it works better now